<resources>
    <string name="app_name">IMHi</string>
    <string name="title_activity_git">GitActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">手机号码</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_reg_in_short">Reg in</string>
    <string name="error_invalid_mobile">请输入正确的手机号码</string>
    <string name="error_invalid_password">密码为6-20位的数字和字母的组合</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">此处不能为空</string>
    <string name="error_sms_error">请输入正确的验证码</string>
    <string name="key_value">0e7842b4a51f98d19c2332240c67e17d</string>
    <string name="imHi">【imHi聊】您的验证码是</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!--Strings to some compile-->

        <string name="postUrl">http://192.168.43.23:8080/</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="hello_world">Hello world!</string>
    <string name="show_dialog">Show WaitDialog</string>
    <string name="please_wait">请稍后...</string>
    <string name= "socketUrl">192.168.43.23</string>
    <string name = "socketPort">8888</string>
    <string name="denglulnfo">5</string>
    <string name="denglucommit">6</string>
    <string name="thelocaluser">null</string>
    <!--忘记密码和注册界面-->

    <string name="send_verification_code">获取验证码</string>
    <string name="modify_account">修改密码</string>
    <string name="user_rule">用户协议</string>
    <string name="tip_please_input_phone">请输入手机号码</string>
    <string name="tip_phone_can_not_be_empty">手机号码不能为空</string>
    <string name="tip_please_input_code">请输入验证码</string>
    <string name="tip_please_input_6_32_password">请输入6-32个密码</string>
    <string name="tip_account_regex_not_right">手机号格式不正确</string>
    <string name="tip_phone_regex_not_right">手机号码格式不正确</string>
    <string name="count_down">%ss</string>

    <string name="requestAddr">http://192.168.43.23</string>
    <string name="port">8080</string>

    <string name="input_hint">发送消息</string>
    <string name="message_click_hint">点击消息事件</string>
    <string name="message_long_click_hint">长按消息事件</string>
    <string name="avatar_click_hint">头像点击事件</string>

    <string name="rationale_record_voice">需要获取麦克风权限来录音</string>
    <string name="rationale_photo">需要获取相册权限</string>
    <string name="rationale_camera">需要获取相机权限</string>

</resources>
